--- a/web/package.json
+++ b/web/package.json
@@ -1,9 +1,10 @@
 {
   "name": "isee3-telemetry",
   "description": "Web view of ISEE-3 reboot telemetry",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "dependencies": {
-    "express": "3.x"
+    "express": "3.x",
+    "socket.io": "1.x"
   }
 }
